--- a/index.html
+++ b/index.html
@@ -11,21 +11,11 @@
 <!--[if lt IE 9]> 
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <![endif]-->
-<title>Cork Notary Public</title>
-<meta name="description" content="Rose Hudson Cork Notary Public">
+<title>Rose Hudson Cork Notary Public</title>
+<meta name="description" content="Rose Hudson Cork Notary Public. Contact by email at XXX@XXX.com or mobile on 08X XXXXXX.">
 <meta name="author" content="Rose Hudson">
-<!--[if lt IE 9]>
-        <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-<!--[if lte IE 8]>
-		<script type="text/javascript" src="http://explorercanvas.googlecode.com/svn/trunk/excanvas.js"></script>
-	<![endif]-->
+
 <link rel="stylesheet" href="css/bootstrap.min.css" />
-<link rel="stylesheet" type="text/css" href="css/isotope.css" media="screen" />
-<link rel="stylesheet" href="js/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
-<link href="css/animate.css" rel="stylesheet" media="screen">
-<link href="flexslider/flexslider.css" rel="stylesheet" />
-<link href="js/owl-carousel/owl.carousel.css" rel="stylesheet">
 <link rel="stylesheet" href="css/styles.css" />
 <!-- Font Awesome -->
 <link href="font/css/font-awesome.min.css" rel="stylesheet">
@@ -55,8 +45,9 @@
   <div class="container">
     <div class="heading text-center"> 
       <!-- Heading -->
-      <h2>Who we are?</h2>
-      <p>At lorem Ipsum available, but the majority have suffered alteration in some form by injected humour.</p>
+      <h2>Rose Hudson Public Notary </h2>
+          <h3>Phone: 0 123 456 789</h3>
+          <h3>Email: <a href="mailto:XXX@XXX.com "> XXX@XXX.com </a> </h3>
     </div>
     <div class="row feature design">
       <div class="area1 columns right">
@@ -95,8 +86,8 @@
 					</div>
   </div>
 </section>
-<div class="container">
- <div id="reviews" class="heading text-center"> 
+<div id="reviews" class="container">
+ <div class="heading text-center"> 
       <!-- Heading -->
       <h2>Customer Testimonials</h2>
       <p>At lorem Ipsum available, but the majority have suffered alteration in some form by injected humour.</p>
@@ -267,23 +258,15 @@
 <section class="copyright">
   <div class="container">
     <div class="row">
-      <div class="col-sm-12 text-center"> Copyright 2014 | All Rights Reserved -- Template by <a href="http://webThemez.com">WebThemez.com</a> </div>
+      <div class="col-sm-12 text-center"> Copyright <script> document.write(new Date().getFullYear()); </script> | All Rights Reserved -- Template by <a href="http://webThemez.com">WebThemez.com</a> </div>
     </div>
     <!-- / .row --> 
   </div>
 </section>
 <a href="#top" class="topHome"><i class="fa fa-chevron-up fa-2x"></i></a> 
 
-<script src="js/modernizr-latest.js"></script> 
+
 <script src="js/jquery-1.8.2.min.js" type="text/javascript"></script> 
 <script src="js/bootstrap.min.js" type="text/javascript"></script> 
-<script src="js/jquery.isotope.min.js" type="text/javascript"></script> 
-<script src="js/fancybox/jquery.fancybox.pack.js" type="text/javascript"></script> 
-<script src="js/jquery.nav.js" type="text/javascript"></script> 
-<script src="js/jquery.fittext.js"></script> 
-
-<script src="flexslider/jquery.flexslider.js"></script>
-<script src="js/custom.js" type="text/javascript"></script> 
-<script src="js/owl-carousel/owl.carousel.js"></script>
 </body>
 </html>
